# tree-sitter-mtlog

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json  test.mtlog  test2.txt  test_output.txt  tree-sitter.json
.github/workflows/: ci.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
docs/: design.md  guide.md  mtlog-README.md  mtlog-analyzer-README.md  mtlog-lsp-README.md
examples/: simple.mtlog
queries/: highlights.scm  injections.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: edge_cases.txt  go_files.txt  go_templates.txt  properties.txt
test/highlight/: basic.mtlog  builtins.mtlog  edge_cases.mtlog  formats.mtlog  go_templates.mtlog
